<resources>
    <string name="app_name">BothAPIApp</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_page">LOGIN PAGE</string>
    <string name="login_header">TMI VOLLEY LOGIN POST</string>
    <string name="nama_produk">Nama Produk</string>
    <string name="product_name">Nama Produk Panjang</string>
    <string name="product_code">Kode Produk</string>
    <string name="harga_produk">Harga Produk</string>
    <string name="product_price">Angka Harga Produk</string>
    <string name="recycler_view_search">Recycler View Search</string>
    <string name="write_preference">Write Preference</string>
    <string name="read_preferences">Read Preferences</string>
    <string name="LogOut">Log Out</string>
    <string name="please_wait">Tunggu Sebentar selagi data ditampilkan</string>
    <string name="size_of_db">Size of DB</string>
    <string name="barcode">Barcode(s)</string>
</resources>